<resources>
    <string name="app_name">Voice Demo</string>
    <string name="paragraph_list">Paragraph List</string>
    <string name="start">Hold to talk</string>
    <string name="check_accuracy">Check Accuracy</string>
    <string name="check">Check</string>
    <string name="stop">Release</string>
    <string name="source">SOURCE</string>
    <string name="latency">Transcription Latency : </string>
    <string name="match">Original-Transcription Match : </string>
    <string name="api">API : GOOGLE API</string>
    <string name="transcription">TRANSCRIPTION</string>
    <string name="title_text">To test, tap the mic and read the sample phrase.</string>
    <string name="sub_title">Describe the last position you had, including Job Title, Company Name, and the start date and end date of it.</string>
</resources>
