<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            tools:context=".VoiceToText">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:text="@string/title_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:text="@string/source"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        />

                    <TextView
                        android:id="@+id/question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="top"
                        android:text="@string/sub_title"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:layout_weight="1"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:text="@string/transcription"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="top"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/match"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="top"
                    android:text="@string/match"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    />

            </LinearLayout>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:layout_weight="1"
                card_view:cardCornerRadius="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="top"
                    android:text="@string/api"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    />

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:background="@android:color/darker_gray"
        android:gravity="bottom"
        android:padding="12dp"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="#ffffff"/>


</LinearLayout>

